--- a/src/styles.css
+++ b/src/styles.css
@@ -79,6 +79,7 @@ header div {
   position: relative;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  gap: 10px;
 }
 
 .to-do-list-item-container {
